Fixed overlapping content on product card
Created loader component

--- a/src/app/product/product-details/product-details.component.css
+++ b/src/app/product/product-details/product-details.component.css
@@ -3,12 +3,12 @@
     padding-left: 10%;
     padding-right: 10%;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 60% 40%;
 }
 .col{
     text-align: left;
 }
 .col img{
-    width: 50%;
+    width: 80%;
     height: auto;
 }
