--- a/src/app/rating/rating.component.css
+++ b/src/app/rating/rating.component.css
@@ -1,6 +1,6 @@
 .rating-container{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 100%;
 }
 .checked{
     color:  #673ab7;;
